--- a/MyCart/shop/templates/shop/index.html
+++ b/MyCart/shop/templates/shop/index.html
@@ -13,8 +13,8 @@
     }
 
   .col-md-3 img{
-  width:100%;
-  height:auto;
+  width:227px;
+  height:255px;
   }
 
   body .carousel-indicator li{
@@ -67,7 +67,7 @@
               <div class="card-body">
                 <h5 class="card-title">{{i.product_name}}</h5>
                 <p class="card-text">{{i.desc}}</p>
-                <a href="#" class="btn btn-primary">Add to Cart</a>
+                <button id="pr{{i.id}}" class="btn btn-primary cart">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -90,4 +90,29 @@
     </a>
   {%endfor%}
 </div>
+{% endblock %}
+
+{% block js%}
+<script>
+// console.log("Working...")
+if (localStorage.getItem('cart') == null){
+  var cart = {}
+}else{
+  cart = JSON.parse(localStorage.getItem('cart'))
+  document.getElementById('cart').innerHTML = Object.keys(cart).length;
+}
+$('.cart').click(function(){
+  idstr =  this.id.toString();
+  // console.log("clicked "+ idstr)
+  if (cart[idstr] == undefined){
+    cart[idstr] = 1
+  }else{
+    cart[idstr] = cart[idstr] + 1; 
+  }
+  console.log(cart)
+  localStorage.setItem('cart',JSON.stringify(cart))
+})
+$('#popcart').popover('show');
+document.getElementById('popcart').setAttribute('data-content','<h5>Cart</h5>')
+</script>
 {% endblock %}
