--- a/MyCart/shop/templates/shop/prodView.html
+++ b/MyCart/shop/templates/shop/prodView.html
@@ -1,4 +1,48 @@
 {% extends 'shop/basic.html' %}
 
-{% block title%} Prodview {% endblock %}
-{% block body %} Prodview Body {% endblock %}
+{% block title%} {{product.product_name}} - Prodview {% endblock %}
+{% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="row">
+                <img src="/media/{{product.image}}" alt="prod img" width="200px" height="200px">
+            </div>
+            <div class="row">
+                <button class="btn btn-primary mx-3">Buy Now</button>
+                <button class="btn btn-primary">Add to cart</button>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <h5>{{product.product_name}}</h5>
+            <p><b>Rs. {{product.price}}</b></p>
+            <p>{{product.desc}}</p>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
+{% block js%}
+<script>
+// console.log("Working...")
+if (localStorage.getItem('cart') == null){
+  var cart = {}
+}else{
+  cart = JSON.parse(localStorage.getItem('cart'))
+  document.getElementById('cart').innerHTML = Object.keys(cart).length;
+}
+$('.cart').click(function(){
+  idstr =  this.id.toString();
+  // console.log("clicked "+ idstr)
+  if (cart[idstr] == undefined){
+    cart[idstr] = 1
+  }else{
+    cart[idstr] = cart[idstr] + 1; 
+  }
+  console.log(cart)
+  localStorage.setItem('cart',JSON.stringify(cart))
+})
+$('#popcart').popover('show');
+document.getElementById('popcart').setAttribute('data-content','<h5>Cart</h5>')
+</script>
+{% endblock %}
