--- a/MyCart/shop/templates/shop/index.html
+++ b/MyCart/shop/templates/shop/index.html
@@ -65,9 +65,13 @@
             <div class="card" style="width: 18rem;">
               <img src='/media/{{i.image}}' class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">{{i.product_name}}</h5>
-                <p class="card-text">{{i.desc}}</p>
-                <button id="pr{{i.id}}" class="btn btn-primary cart">Add to Cart</button>
+                <h5 class="card-title" id="namepr{{i.id}}">{{i.product_name}}</h5>
+                <p class="card-text">{{i.desc|slice:":50"}}...</p>
+                <span id="divpr{{i.id}}" class="divpr">
+                  <button id="pr{{i.id}}" class="btn btn-primary cart">Add to Cart</button>
+                </span>
+                <a href="/shop/productview/{{i.id}}"><button id="qv{{i.id}}" class="btn btn-primary cart">Quick View</button></a>
+              
               </div>
             </div>
           </div>
@@ -94,25 +98,62 @@
 
 {% block js%}
 <script>
-// console.log("Working...")
-if (localStorage.getItem('cart') == null){
-  var cart = {}
-}else{
-  cart = JSON.parse(localStorage.getItem('cart'))
-  document.getElementById('cart').innerHTML = Object.keys(cart).length;
-}
-$('.cart').click(function(){
-  idstr =  this.id.toString();
-  // console.log("clicked "+ idstr)
-  if (cart[idstr] == undefined){
-    cart[idstr] = 1
+  if (localStorage.getItem('cart') == null){
+    var cart = {}
   }else{
-    cart[idstr] = cart[idstr] + 1; 
+    cart = JSON.parse(localStorage.getItem('cart'))
+    document.getElementById('cart').innerHTML = Object.keys(cart).length;
+    updateCart(cart);
   }
-  console.log(cart)
-  localStorage.setItem('cart',JSON.stringify(cart))
-})
-$('#popcart').popover('show');
-document.getElementById('popcart').setAttribute('data-content','<h5>Cart</h5>')
+  $('.cart').click(function(){
+    idstr =  this.id.toString();
+    if (cart[idstr] == undefined){
+      cart[idstr] = 1
+    }else{
+      cart[idstr] = cart[idstr] + 1; 
+    }
+    updateCart(cart)
+    localStorage.setItem('cart',JSON.stringify(cart))
+  })
+  $('#popcart').popover('show');
+  updatePopover(cart);
+  function updatePopover(cart){
+    console.log('We are in updatePopover');
+    var popStr = "";
+    popStr = popStr + "<h5>Cart for your items in my shopping cart</h5><div class = 'mx-2 my-2'>"
+    var i = 1;
+    for (var item in cart){
+      popStr = popStr + "<b>"+i+"</b>.";
+      popStr = popStr + document.getElementById('name'+item).innerHTML.slice(0,19)+"Qty.."+cart[item]+"<br>";
+      i=i+1;
+    }
+    popStr = popStr + "</div>";
+    console.log(popStr);
+    document.getElementById('popcart').setAttribute('data-content',popStr);
+    $('#popcart').popover('show');
+    
+  }
+  // document.getElementById('popcart').setAttribute('data-content','<h5>Cart</h5>')
+  function updateCart(cart){
+    for(var item in cart){
+      document.getElementById('div'+item).innerHTML = "<button id='minus"+item+"' class='btn btn-primary minus'>-</button> <span id='val"+item+"'>"+cart[item]+"</span> <button id='plus"+item+"' class='btn btn-primary plus'>+</button>";
+    }
+    localStorage.setItem('cart', JSON.stringify(cart));
+    document.getElementById('cart').innerHTML = Object.keys(cart).length;
+  }
+  // If plus or minus button is clicked, change the cart as well as the display value
+  $('.divpr').on("click", "button.minus", function() {
+      a = this.id.slice(7, );
+      cart['pr' + a] = cart['pr' + a] - 1;
+      cart['pr' + a] = Math.max(0, cart['pr' + a]);
+      document.getElementById('valpr' + a).innerHTML = cart['pr' + a];
+      updateCart(cart);
+  });
+  $('.divpr').on("click", "button.plus", function() {
+      a = this.id.slice(6, );
+      cart['pr' + a] = cart['pr' + a] + 1;
+      document.getElementById('valpr' + a).innerHTML = cart['pr' + a];
+      updateCart(cart);
+  });
 </script>
 {% endblock %}
